Add updated profile photo 🧑‍👨‍🎤

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "about"
 ---
 
 <section class="content">
-    <h1>hi...i'm jonasz</h1>
+    <h1>welcome</h1>
 
     <p>
         I'm currently a student at <a href="https://www.makeschool.com/" target="_blank">Make School</a> in San
@@ -13,20 +13,12 @@ title: "about"
     <!--<h3 class="rainbow">a little more about me:</h3>-->
 
 
-    <h3 class="rainbow">if you'd like to learn more, you can:</h3>
+    <h3 class="rainbow">if you'd like to learn more, you can</h3>
     <p>
-        Take a look at my <a href="/projects">recent projects</a>,
+        take a look at my <a href="/projects">recent projects</a>,
         send me an <a href="mailto:jonaszakr@gmail.com?subject=hi jonasz!" title="Email me"
             aria-label="Email me">email</a> or reach out on <a href="https://www.linkedin.com/in/jonasz-karwacki/"
             target="_blank" title="Find me on LinkedIn" aria-label="Find me on LinkedIn">linkedin</a>.
     </p>
 
-</section>
-<section class="content">
-    <div class="footer">
-        <section class="thanks">
-            <span>thanks for visiting!</span>
-            <span><a href="#" class="heart" aria-hidden="true">🥳</a></span>
-        </section>
-    </div>
 </section>
