Fix issue where projects aren't filtered when the page loads👨🏻‍🔧

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@ title: "projects"
 
   <p><label for="status-options">A collection of</label>
       <select id="status-options">
-        <option value="finished">finished</option>
+        <option selected value="finished">finished</option>
         <option value="ongoing">ongoing</option>
         <option value="planned">planned</option>
         <option value="all">all</option>
