Refactor 🍙🍚 home page to be the aboutme page. Redirect home to projects

--- a/index.html
+++ b/index.html
@@ -1,24 +1,4 @@
----
-layout: layout
-title: "about"
----
-
-<section class="content">
-    <h1>welcome</h1>
-
-    <p>
-        I'm currently a student at <a href="https://www.makeschool.com/" target="_blank">Make School</a> in San
-        Francisco, where I'm getting a bachelor's in computer science.
-    </p>
-    <!--<h3 class="rainbow">a little more about me:</h3>-->
-
-
-    <h3 class="rainbow">if you'd like to learn more, you can</h3>
-    <p>
-        take a look at my <a href="/projects">recent projects</a>,
-        send me an <a href="mailto:jonaszakr@gmail.com?subject=hi jonasz!" title="Email me"
-            aria-label="Email me">email</a> or reach out on <a href="https://www.linkedin.com/in/jonasz-karwacki/"
-            target="_blank" title="Find me on LinkedIn" aria-label="Find me on LinkedIn">linkedin</a>.
-    </p>
-
-</section>
+<meta charset="utf-8">
+<title>Redirecting to projects</title>
+<meta http-equiv="refresh" content="0; URL=/projects">
+<link rel="canonical" href="https://jonasz.me/">
