Update with legal name

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,8 +7,7 @@ title: "about"
     <h1>welcome</h1>
 
     <p>
-        I'm currently a student at <a href="https://www.makeschool.com/" target="_blank">Make School</a> in San
-        Francisco, where I'm getting a bachelor's in computer science.
+        I make helpful software for creative people.
     </p>
     <!--<h3 class="rainbow">a little more about me:</h3>-->
 
@@ -16,8 +15,8 @@ title: "about"
     <h3 class="rainbow">If you'd like to learn more about me,</h3>
     <p>
         Take a look at my <a href="/projects">recent projects</a>,
-        send me an <a href="mailto:jonaszakr@gmail.com?subject=hi jonasz!" title="Email me"
-            aria-label="Email me">email</a> or reach out on <a href="https://www.linkedin.com/in/jonasz-karwacki/"
+        send me an <a href="mailto:erinakarice@gmail.com?subject=hi erin!" title="Email me"
+            aria-label="Email me">email</a> or reach out on <a href="https://www.linkedin.com/in/erinak/"
             target="_blank" title="Find me on LinkedIn" aria-label="Find me on LinkedIn">Linkedin</a>.
     </p>
 
