--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <meta charset="utf-8">
 <title>Redirecting to projects</title>
 <meta http-equiv="refresh" content="0; URL=/projects">
-<link rel="canonical" href="https://jonasz.me/">
+<link rel="canonical" href="https://er1n.me/">
