Add Picture Laplacian

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,19 @@ title: "projects"
     .finished .ongoing .planned 
   -->
   <ul class="listing projects" id="project-list">
+    <h3 class="rainbow">2023</h3>
+    <li class="finished">
+      <p>
+        <a onclick="toggleIframe(this)">Picture Laplacian</a>: Make images like the profile on this website.
+      </p>
+      <div class="frame-overlay-container">
+        <div class="overlay"></div>
+        <iframe height="420px" width="100%" data-src="https://repl.it/@escofresco/Picture-Laplacian?lite=true" scrolling="no"
+          frameborder="no" allowtransparency="true" allowfullscreen="true"
+          sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+      </div>
+    </li>
+    <h3 class="rainbow">2022</h3>
     <h3 class="rainbow">2021</h3>
     <li class="planned">
       <p><a target="_blank" href="https://github.com/escofresco/locoledger">Loco Ledger</a>: Leave a note that no one
@@ -95,7 +108,7 @@ title: "projects"
       </p>
       <div class="frame-overlay-container">
         <div class="overlay"></div>
-        <iframe height="420px" width="100%" data-src="https://repl.it/@JonaszKarwacki/spaceman?lite=true" scrolling="no"
+        <iframe height="420px" width="100%" data-src="https://repl.it/@escofresco/spaceman?lite=true" scrolling="no"
           frameborder="no" allowtransparency="true" allowfullscreen="true"
           sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
       </div>
@@ -124,7 +137,7 @@ title: "projects"
 
         <div class="overlay"></div>
         <iframe height="420px" width="100%"
-          data-src="https://repl.it/@JonaszKarwacki/makeschoolfspcaptainrainbowscolorchecklist?lite=true" scrolling="no"
+          data-src="https://repl.it/@escofresco/makeschoolfspcaptainrainbowscolorchecklist?lite=true" scrolling="no"
           frameborder="no" allowtransparency="true" allowfullscreen="true"
           sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
       </div>
@@ -163,7 +176,7 @@ title: "projects"
       <div class="frame-overlay-container">
         <div class="overlay"></div>
         <iframe height="420px" width="100%"
-          data-src="https://repl.it/@JonaszKarwacki/makeschoolfspherdimmunitysimulation?lite=true" scrolling="no"
+          data-src="https://repl.it/@escofresco/makeschoolfspherdimmunitysimulation?lite=true" scrolling="no"
           frameborder="no" allowtransparency="true" allowfullscreen="true"
           sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
       </div>
